--- a/thesis.bib
+++ b/thesis.bib
@@ -351,7 +351,7 @@ author = "R. Fr{\"u}hwirth"
 	journal={Proceedings of the IEEE},
 	volume={8},
 	year={1998},
-	doi=10.1109/5.726788,
+	doi="10.1109/5.726788",
 	
 
 
@@ -375,3 +375,320 @@ author = "R. Fr{\"u}hwirth"
 	number			= 090001,
 	
 }
+
+@misc{SWGuideCMSSW,
+	title = "{CMS Software Guide on the CMSSW Application Framework}",
+	howpublished = {\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/WorkBookCMSSWFramework?rev=13}},
+	note = {Accessed: 2014-10-26}
+}
+
+@book{PTDR1,
+      author        = "{CMS Collaboration}",
+      title         = "{CMS Physics: Technical Design Report Volume 1: Detector
+                       Performance and Software}",
+      publisher     = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      series        = "Technical Design Report CMS",
+      year          = "2006",
+      note          = "There is an error on cover due to a technical problem for
+                       some items",
+}
+
+@article{PATNote,
+  author={W Adam and V Adler and B Hegner and L Lista and S Lowette and P Maksimovic and G Petrucciani and S Rappoccio and F Ronga and R
+Tenchini and R Wolf},
+  title="{PAT: The CMS Physics Analysis Toolkit}",
+  journal={Journal of Physics: Conference Series},
+  volume={219},
+  number={3},
+  pages={032017},
+  url={http://stacks.iop.org/1742-6596/219/i=3/a=032017},
+  year={2010},
+  abstract={The CMS Physics Analysis Toolkit (PAT) is presented. The PAT is a high-level analysis layer enabling the development of common analysis efforts across and within Physics Analysis Groups. It aims at fulfilling the needs of most CMS analyses, providing both ease-of-use for the beginner and flexibility for the advanced user. The main PAT concepts are described in detail and some examples from physics analyses are given.}
+}
+
+@article{ROOT,
+	author = "R. Brun and F. Rademakers",
+	title = "{ROOT - An Object Oriented Data Analysis Framework}",
+	journal = "Nucl. Inst. \& Meth. in Phys. Res. A",
+	volume = {389},
+	pages = {81-86},
+	year = 1996,
+	note = "See also http://root.cern.ch/"
+	
+}
+
+@article{doi:10.1146/annurev-nucl-102010-130059,
+author = {Bird, Ian},
+title = {Computing for the Large Hadron Collider},
+journal = {Annual Review of Nuclear and Particle Science},
+volume = {61},
+number = {1},
+pages = {99-118},
+year = {2011},
+doi = {10.1146/annurev-nucl-102010-130059},
+
+URL = { 
+        http://dx.doi.org/10.1146/annurev-nucl-102010-130059
+    
+},
+eprint = { 
+        http://dx.doi.org/10.1146/annurev-nucl-102010-130059
+    
+}
+
+}
+@misc{WLCG,
+	title = "{Worldwide LHC Computing Grid }",
+	howpublished = {\url{http://wlcg.web.cern.ch/}},
+	note = {Accessed: 2014-10-26}
+}
+
+@article{CRAB,
+year={2007},
+isbn={978-3-540-77219-4},
+booktitle={High Performance Computing – HiPC 2007},
+volume={4873},
+series={Lecture Notes in Computer Science},
+editor={Aluru, Srinivas and Parashar, Manish and Badrinath, Ramamurthy and Prasanna, ViktorK.},
+doi={10.1007/978-3-540-77220-0_52},
+title={The CMS Remote Analysis Builder (CRAB)},
+url={http://dx.doi.org/10.1007/978-3-540-77220-0_52},
+publisher={Springer Berlin Heidelberg},
+author={Spiga, D. and Lacaprara, S. and Bacchi, W. and Cinquilli, M. and Codispoti, G. and Corvo, M. and Dorigo, A. and Fanfani, A. and Fanzago, F. and Farina, F. and Merlo, M. and Gutsche, O. and Servoli, L. and Kavka, C.},
+pages={580-586},
+language={English}
+}
+
+@article{1742-6596-119-7-072001,
+  author={A Afaq and A Dolgert and Y Guo and C Jones and S Kosyakov and V Kuznetsov and L Lueking and D Riley and V Sekhri},
+  title={The CMS dataset bookkeeping service},
+  journal={Journal of Physics: Conference Series},
+  volume={119},
+  number={7},
+  pages={072001},
+  url={http://stacks.iop.org/1742-6596/119/i=7/a=072001},
+  year={2008},
+  abstract={The CMS Dataset Bookkeeping Service (DBS) has been developed to catalog all CMS event data from Monte Carlo and Detector sources. It provides the ability to identify MC or trigger source, track data provenance, construct datasets for analysis, and discover interesting data. CMS requires processing and analysis activities at various service levels and the DBS system provides support for localized processing or private analysis, as well as global access for CMS users at large. Catalog entries can be moved among the various service levels with a simple set of migration tools, thus forming a loose federation of databases. DBS is available to CMS users via a Python API, Command Line, and a Discovery web page interfaces. The system is built as a multi-tier web application with Java servlets running under Tomcat, with connections via JDBC to Oracle or MySQL database backends. Clients connect to the service through HTTP or HTTPS with authentication provided by GRID certificates and authorization through VOMS. DBS is an integral part of the overall CMS Data Management and Workflow Management systems.}
+}
+@book{HalzenMartin,
+	author = "{F. Halzen and A. Martin}",
+	title = "{Quarks and Leptons: An Introductory Course in Modern Particle Physics}",
+	publisher = "{John Wiley \& Sons}",
+	year = 1984,
+}	
+
+@article{Madgraph1,
+  author={Johan Alwall and Pavel Demin and Simon de Visscher and Rikkert Frederix and Michel Herquet and Fabio Maltoni and Tilman
+Plehn and David L. Rainwater and Tim Stelzer},
+  title={MadGraph/MadEvent v4: the new web generation},
+  journal={Journal of High Energy Physics},
+  volume={2007},
+  number={09},
+  pages={028},
+  url={http://stacks.iop.org/1126-6708/2007/i=09/a=028},
+  year={2007},
+}
+
+@article{Madgraph2,
+year={2014},
+journal={Journal of High Energy Physics},
+eid={79},
+volume={2014},
+number={7},
+doi={10.1007/JHEP07(2014)079},
+title={The automated computation of tree-level and next-to-leading order differential cross sections, and their matching to parton shower simulations},
+url={http://dx.doi.org/10.1007/JHEP07%282014%29079},
+publisher={Springer Berlin Heidelberg},
+keywords={Monte Carlo Simulations; NLO Computations},
+author={Alwall, J. and Frederix, R. and Frixione, S. and Hirschi, V. and Maltoni, F. and Mattelaer, O. and Shao, H.-S. and Stelzer, T. and Torrielli, P. and Zaro, M.},
+language={English}
+}	
+
+@article{Aaron:2009aa,
+      author         = "Aaron, F.D. and others",
+      title          = "{Combined Measurement and QCD Analysis of the Inclusive
+                        e+- p Scattering Cross Sections at HERA}",
+      collaboration  = "H1 and ZEUS Collaboration",
+      journal        = "JHEP",
+      volume         = "1001",
+      pages          = "109",
+      doi            = "10.1007/JHEP01(2010)109",
+      year           = "2010",
+      eprint         = "0911.0884",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "DESY-09-158",
+      SLACcitation   = "%%CITATION = ARXIV:0911.0884;%%",
+}
+
+@article{Pumplin:2002vw,
+      author         = "Pumplin, J. and Stump, D.R. and Huston, J. and Lai, H.L.
+                        and Nadolsky, Pavel M. and others",
+      title          = "{New generation of parton distributions with
+                        uncertainties from global QCD analysis}",
+      journal        = "JHEP",
+      volume         = "0207",
+      pages          = "012",
+      doi            = "10.1088/1126-6708/2002/07/012",
+      year           = "2002",
+      eprint         = "hep-ph/0201195",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MSU-HEP-011101",
+      SLACcitation   = "%%CITATION = HEP-PH/0201195;%%",
+}
+
+@article{Lai:2010vv,
+      author         = "Lai, Hung-Liang and Guzzi, Marco and Huston, Joey and Li,
+                        Zhao and Nadolsky, Pavel M. and others",
+      title          = "{New parton distributions for collider physics}",
+      journal        = "Phys.Rev.",
+      volume         = "D82",
+      pages          = "074024",
+      doi            = "10.1103/PhysRevD.82.074024",
+      year           = "2010",
+      eprint         = "1007.2241",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MSUHEP-100707, SMU-HEP-10-10",
+      SLACcitation   = "%%CITATION = ARXIV:1007.2241;%%",
+}
+
+@article{Ball:2012cx,
+      author         = "Ball, Richard D. and Bertone, Valerio and Carrazza,
+                        Stefano and Deans, Christopher S. and Del Debbio, Luigi
+                        and others",
+      title          = "{Parton distributions with LHC data}",
+      journal        = "Nucl.Phys.",
+      volume         = "B867",
+      pages          = "244-289",
+      doi            = "10.1016/j.nuclphysb.2012.10.003",
+      year           = "2013",
+      eprint         = "1207.1303",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "EDINBURGH-2012-08, IFUM-FT-997, FR-PHENO-2012-014,
+                        RWTH-TTK-12-25, CERN-PH-TH-2012-037, SFB-CPP-12-47\",
+      SLACcitation   = "%%CITATION = ARXIV:1207.1303;%%",
+}
+
+@article{Martin:2009iq,
+      author         = "Martin, A.D. and Stirling, W.J. and Thorne, R.S. and
+                        Watt, G.",
+      title          = "{Parton distributions for the LHC}",
+      journal        = "Eur.Phys.J.",
+      volume         = "C63",
+      pages          = "189-285",
+      doi            = "10.1140/epjc/s10052-009-1072-5",
+      year           = "2009",
+      eprint         = "0901.0002",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "IPPP-08-95, DCPT-08-190, CAVENDISH-HEP-08-16",
+      SLACcitation   = "%%CITATION = ARXIV:0901.0002;%%",
+}
+
+@article{Altarelli:1977zs,
+      author         = "G. Altarelli and G. Parisi",
+      title          = "{Asymptotic Freedom in Parton Language}",
+      journal        = "Nucl.Phys.",
+      volume         = "B126",
+      pages          = "298",
+      doi            = "10.1016/0550-3213(77)90384-4",
+      year           = "1977",
+      reportNumber   = "LPTENS-77-6",
+      SLACcitation   = "%%CITATION = NUPHA,B126,298;%%",
+}
+@article{Dokshitzer,
+	author = "{Y. L. Dokshitzer}",
+	title = "{Calculation of the Structure Functions for Deep Inelastic Scattering and $e^{+}e^{-}$  Annihilation by Perturbation Theory in Quantum Chromodynamics}",
+	journal = "{Sov. Phys. JETP}",
+	volume = "46",
+	pages = "641-653",
+	year = "1977",
+
+
+}
+@article{Gribov,
+	author = "{V. N. Gribov and L. N. Lipatov}",
+	title = "{Deep inelastic electron scattering in perturbation theory}",
+	journal = "{Sov. J. Nucl. Phys.}",
+	volume = "15",
+	pages = "438-450",
+	year = "1972",
+
+
+}
+
+@article{Pythia,
+      author         = "Sj{\"o}strand, Torbjorn and Mrenna, Stephen and Skands, Peter
+                        Z.",
+      title          = "{PYTHIA 6.4 Physics and Manual}",
+      journal        = "JHEP",
+      volume         = "05",
+      pages          = "026",
+      doi            = "10.1088/1126-6708/2006/05/026",
+      year           = "2006",
+      eprint         = "hep-ph/0603175",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-06-052-CD-T, LU-TP-06-13",
+      SLACcitation   = "%%CITATION = HEP-PH/0603175;%%",
+}
+
+@article{Hoche:2006ph,
+      author         = "Hoeche, Stefan and Krauss, Frank and Lavesson, Nils and
+                        Lonnblad, Leif and Mangano, Michelangelo and others",
+      title          = "{Matching parton showers and matrix elements}",
+      year           = "2006",
+      eprint         = "hep-ph/0602031",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/0602031;%%",
+}
+
+@article{Re:2010bp,
+      author         = "Re, Emanuele",
+      title          = "{Single-top Wt-channel production matched with parton
+                        showers using the POWHEG method}",
+      journal        = "Eur.Phys.J.",
+      volume         = "C71",
+      pages          = "1547",
+      doi            = "10.1140/epjc/s10052-011-1547-z",
+      year           = "2011",
+      eprint         = "1009.2450",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "IPPP-10-74, DCPT-10-148",
+      SLACcitation   = "%%CITATION = ARXIV:1009.2450;%%",
+}
+@article{Alioli:2009je,
+      author         = "Alioli, Simone and Nason, Paolo and Oleari, Carlo and Re,
+                        Emanuele",
+      title          = "{NLO single-top production matched with shower in POWHEG:
+                        s- and t-channel contributions}",
+      journal        = "JHEP",
+      volume         = "0909",
+      pages          = "111",
+      doi            = "10.1007/JHEP02(2010)011, 10.1088/1126-6708/2009/09/111",
+      year           = "2009",
+      eprint         = "0907.4076",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:0907.4076;%%",
+}
+
+@article{Powheg,
+  author={Paolo Nason},
+  title={A new method for combining NLO QCD with shower Monte Carlo algorithms},
+  journal={Journal of High Energy Physics},
+  volume={2004},
+  number={11},
+  pages={040},
+  url={http://stacks.iop.org/1126-6708/2004/i=11/a=040},
+  year={2004},
+ 
+}
+	
