--- a/thesis.bib
+++ b/thesis.bib
@@ -691,4 +691,41 @@ language={English}
   year={2004},
  
 }
-	
+@article{Field:2011iq,
+      author         = "Field, Rick",
+      title          = "{Min-Bias and the Underlying Event at the LHC}",
+      journal        = "Acta Phys.Polon.",
+      volume         = "B42",
+      pages          = "2631-2656",
+      doi            = "10.5506/APhysPolB.42.2631",
+      year           = "2011",
+      eprint         = "1110.5530",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1110.5530;%%",
+      note			 = "{Tune $Z2^{*}$ is a variation of Tune $Z2$ described in this reference}"
+}
+@article{Agostinelli:2002hh,
+      author         = "Agostinelli, S. and others",
+      title          = "{GEANT4: A Simulation toolkit}",
+      collaboration  = "GEANT4",
+      journal        = "Nucl.Instrum.Meth.",
+      volume         = "A506",
+      pages          = "250-303",
+      doi            = "10.1016/S0168-9002(03)01368-8",
+      year           = "2003",
+      reportNumber   = "SLAC-PUB-9350, FERMILAB-PUB-03-339",
+      SLACcitation   = "%%CITATION = NUIMA,A506,250;%%",
+}
+
+@article{1742-6596-331-3-032049,
+  author={S Abdullin and P Azzi and F Beaudette and P Janot and A Perrotta and the CMS Collaboration},
+  title={The Fast Simulation of the CMS Detector at LHC},
+  journal={Journal of Physics: Conference Series},
+  volume={331},
+  number={3},
+  pages={032049},
+  url={http://stacks.iop.org/1742-6596/331/i=3/a=032049},
+  year={2011},
+  abstract={The CMS collaboration has developed a fast Monte Carlo simulation of the CMS detector with event production rates ~100 times faster than the GEANT4-based simulation, with nonetheless comparable accuracy for most of the physics objects typically considered in the analyses. We discuss basic technical principles of the CMS Fast Simulation and their implementation in the different components of the detector: the silicon tracker, the electromagnetic calorimeter, the hadronic calorimeter, the muon system, the Level 1 and the High Level Trigger. A few comparisons of the Fast Simulation results both with the GEANT4-based Full Simulation and with the LHC data are shown.}
+}	
